tests/snapshots/parse__addon.snap
---
source: tests/parse.rs
expression: "parse(\"addon\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        includes: [],
        directories: [
            Directory {
                path: Some(
                    "plugins",
                ),
                addons: [
                    Modrinth(
                        ModrinthAddon {
                            id: "luckperms",
                            version: Some(
                                "latest",
                            ),
                            files: [
                                "luckperms.jar",
                            ],
                        },
                    ),
                    Modrinth(
                        ModrinthAddon {
                            id: "spark",
                            version: None,
                            files: [],
                        },
                    ),
                    Hangar(
                        HangarAddon {
                            project: "ViaVersion",
                            version: Some(
                                "latest",
                            ),
                        },
                    ),
                    CurseForge(
                        CurseForgeAddon {
                            project: "238222",
                            version: None,
                        },
                    ),
                    GitHub(
                        GitHubAddon {
                            repository: "PaperMC/Velocity",
                            tag: Some(
                                "latest",
                            ),
                            asset: Some(
                                "velocity-*.jar",
                            ),
                        },
                    ),
                    Maven(
                        MavenAddon {
                            group: "com.example",
                            artifact: "mylib",
                            repository: None,
                            version: Some(
                                "1.0-SNAPSHOT",
                            ),
                            classifier: Some(
                                "all",
                            ),
                            extension: None,
                        },
                    ),
                    Download(
                        DownloadAddon(
                            Download {
                                url: "https://example.com/plugins/custom.jar",
                                path: None,
                                checksums: Checksums(
                                    {
                                        Sha1: "fc8bb9919fa77c670b7ed5c284bcb66770ea71fc",
                                    },
                                ),
                                size: Some(
                                    1,
                                ),
                            },
                        ),
                    ),
                ],
                packages: [],
                copies: [],
                symlinks: [],
            },
            Directory {
                path: Some(
                    "mods",
                ),
                addons: [
                    FabricLoader(
                        FabricLoaderAddon {
                            loader: Some(
                                "0.16.5",
                            ),
                            installer: Some(
                                "1.0.1",
                            ),
                        },
                    ),
                    Modrinth(
                        ModrinthAddon {
                            id: "create",
                            version: Some(
                                "beta",
                            ),
                            files: [],
                        },
                    ),
                    Modrinth(
                        ModrinthAddon {
                            id: "a:b",
                            version: None,
                            files: [],
                        },
                    ),
                ],
                packages: [],
                copies: [],
                symlinks: [],
            },
            Directory {
                path: None,
                addons: [
                    PaperMc(
                        PaperMcAddon {
                            project: "paper",
                            version: Some(
                                "1.21.1",
                            ),
                            build: Some(
                                "132",
                            ),
                        },
                    ),
                ],
                packages: [],
                copies: [],
                symlinks: [],
            },
        ],
        targets: [
            Target {
                name: "smp",
                path: Some(
                    "./run/smp",
                ),
                kind: Server,
            },
        ],
        subgroups: [],
        meta: {},
    },
}
