tests/snapshots/parse__artifact_default_destination.snap
---
source: tests/parse.rs
expression: "parse(\"artifact-default-destination\")"
---
Manifest {
    root: Group {
        label: None,
        runtimes: [],
        directories: [
            Directory {
                path: Some(
                    "plugins",
                ),
                presets: [],
                packages: [
                    Package {
                        label: Some(
                            "custom",
                        ),
                        sources: [
                            Download(
                                Download {
                                    url: "https://example.com/custom.jar",
                                    path: None,
                                },
                            ),
                        ],
                        build: None,
                        artifacts: [
                            PackageArtifact {
                                from: "build/libs/custom-1.0.jar",
                                to: None,
                            },
                        ],
                    },
                ],
                copies: [],
                symlinks: [],
            },
        ],
        targets: [
            Target {
                name: "main",
                path: None,
                kind: Server,
            },
        ],
        subgroups: [],
    },
}
