tests/snapshots/parse__custom_package_download.snap
---
source: tests/parse.rs
expression: "parse(\"custom-package-download\")"
---
Manifest {
    root: Group {
        label: None,
        runtimes: [],
        directories: [
            Directory {
                path: None,
                presets: [],
                packages: [
                    Package {
                        label: Some(
                            "viaversion",
                        ),
                        sources: [
                            Download(
                                Download {
                                    url: "https://github.com/ViaVersion/ViaVersion/releases/download/5.0.0/ViaVersion-5.0.0.jar",
                                    path: None,
                                },
                            ),
                        ],
                        build: None,
                        artifacts: [
                            PackageArtifact {
                                from: "ViaVersion-5.0.0.jar",
                                to: Some(
                                    "plugins/ViaVersion-5.0.0.jar",
                                ),
                            },
                        ],
                    },
                ],
            },
        ],
        copies: [],
        links: [],
        targets: [
            Target {
                name: "server",
                path: None,
                kind: Server,
            },
        ],
        subgroups: [],
    },
}
