tests/snapshots/parse__custom_package_git_build.snap
---
source: tests/parse.rs
expression: "parse(\"custom-package-git-build\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        directories: [
            Directory {
                path: None,
                addons: [],
                packages: [
                    Package {
                        label: Some(
                            "custom-plugin",
                        ),
                        sources: [
                            Git(
                                Git {
                                    url: "https://github.com/example/custom-plugin.git",
                                    path: None,
                                },
                            ),
                        ],
                        build: Some(
                            PackageBuild {
                                tasks: [
                                    Execute(
                                        ExecuteTask {
                                            program: "gradlew",
                                            arguments: [
                                                "build",
                                            ],
                                            directory: Some(
                                                ".",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        artifacts: [
                            PackageArtifact {
                                from: "build/libs/custom-plugin.jar",
                                to: Some(
                                    "plugins/custom-plugin.jar",
                                ),
                            },
                        ],
                    },
                ],
                copies: [],
                symlinks: [],
            },
        ],
        targets: [
            Target {
                name: "server",
                path: None,
                kind: Server,
            },
        ],
        subgroups: [],
    },
}
