tests/snapshots/parse__dir_scoped_files.snap
---
source: tests/parse.rs
expression: "parse(\"dir-scoped-files\")"
---
Manifest {
    root: Group {
        label: None,
        runtimes: [],
        directories: [
            Directory {
                path: Some(
                    "plugins/LuckPerms",
                ),
                presets: [],
                packages: [],
                copies: [
                    CopyFile {
                        from: "config/luckperms.yml",
                        to: "config.yml",
                        overwrite: false,
                    },
                ],
                symlinks: [],
            },
            Directory {
                path: Some(
                    "plugins/spark",
                ),
                presets: [],
                packages: [],
                copies: [
                    CopyFile {
                        from: "config/spark.yml",
                        to: "config.yml",
                        overwrite: false,
                    },
                ],
                symlinks: [],
            },
        ],
        targets: [
            Target {
                name: "smp",
                path: Some(
                    "./run/smp",
                ),
                kind: Server,
            },
        ],
        subgroups: [],
    },
}
