tests/snapshots/parse__download_checksums.snap
---
source: tests/parse.rs
expression: "parse(\"download-checksums\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        includes: [],
        directories: [
            Directory {
                path: None,
                addons: [],
                packages: [
                    Package {
                        label: Some(
                            "viaversion",
                        ),
                        sources: [
                            Download(
                                Download {
                                    url: "https://example.com/viaversion.jar",
                                    path: None,
                                    checksums: Checksums(
                                        {
                                            Sha1: "3702badb047b0586c4e634f6cea2671c09e3e6a5",
                                            Sha512: "727c12d5b0f616e99edb4127f128a33b8255670adae5459c6b5fccc1dc1eee05c7d2f4d95607b05d1a7c4402c5fb7fc44e2715896f228c7ae5a783d3a6fa4a61",
                                        },
                                    ),
                                    size: Some(
                                        9,
                                    ),
                                },
                            ),
                        ],
                        build: None,
                        artifacts: [
                            PackageArtifact {
                                from: "viaversion.jar",
                                to: Some(
                                    "plugins/viaversion.jar",
                                ),
                            },
                        ],
                    },
                ],
                copies: [],
                symlinks: [],
            },
        ],
        targets: [
            Target {
                name: "server",
                path: None,
                kind: Server,
            },
        ],
        subgroups: [],
    },
}
