tests/snapshots/parse__empty_groups.snap
---
source: tests/parse.rs
expression: "parse(\"empty-groups\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        includes: [],
        directories: [],
        targets: [
            Target {
                name: "bare",
                path: None,
                kind: Server,
            },
        ],
        subgroups: [
            Group {
                label: Some(
                    "empty-group",
                ),
                platforms: [],
                runtimes: [],
                includes: [],
                directories: [],
                targets: [],
                subgroups: [],
            },
            Group {
                label: Some(
                    "group-with-empty-dir",
                ),
                platforms: [],
                runtimes: [],
                includes: [],
                directories: [
                    Directory {
                        path: Some(
                            "plugins",
                        ),
                        addons: [],
                        packages: [],
                        copies: [],
                        symlinks: [],
                    },
                ],
                targets: [],
                subgroups: [],
            },
        ],
    },
}
