tests/snapshots/parse__full_design_doc.snap
---
source: tests/parse.rs
expression: "parse(\"full-mcman\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        includes: [],
        directories: [],
        targets: [],
        subgroups: [
            Group {
                label: Some(
                    "proxy",
                ),
                platforms: [
                    Velocity(
                        VelocityPlatform {
                            version: None,
                            build: None,
                        },
                    ),
                ],
                runtimes: [],
                includes: [],
                directories: [
                    Directory {
                        path: Some(
                            "plugins",
                        ),
                        addons: [
                            Modrinth(
                                ModrinthAddon {
                                    id: "luckperms",
                                    version: Some(
                                        "latest",
                                    ),
                                    files: [],
                                },
                            ),
                            Modrinth(
                                ModrinthAddon {
                                    id: "velocity-viasneak",
                                    version: Some(
                                        "latest",
                                    ),
                                    files: [],
                                },
                            ),
                        ],
                        packages: [],
                        copies: [],
                        symlinks: [],
                    },
                    Directory {
                        path: None,
                        addons: [
                            PaperMc(
                                PaperMcAddon {
                                    project: "velocity",
                                    version: Some(
                                        "latest",
                                    ),
                                    build: None,
                                },
                            ),
                        ],
                        packages: [],
                        copies: [],
                        symlinks: [],
                    },
                ],
                targets: [
                    Target {
                        name: "proxy",
                        path: Some(
                            "./run/proxy",
                        ),
                        kind: Server,
                    },
                ],
                subgroups: [],
            },
            Group {
                label: Some(
                    "game-servers",
                ),
                platforms: [],
                runtimes: [],
                includes: [],
                directories: [
                    Directory {
                        path: Some(
                            "plugins",
                        ),
                        addons: [
                            Modrinth(
                                ModrinthAddon {
                                    id: "luckperms",
                                    version: Some(
                                        "latest",
                                    ),
                                    files: [],
                                },
                            ),
                            Modrinth(
                                ModrinthAddon {
                                    id: "spark",
                                    version: Some(
                                        "latest",
                                    ),
                                    files: [],
                                },
                            ),
                        ],
                        packages: [],
                        copies: [],
                        symlinks: [],
                    },
                ],
                targets: [],
                subgroups: [
                    Group {
                        label: Some(
                            "lobby",
                        ),
                        platforms: [
                            Paper(
                                PaperPlatform {
                                    minecraft: Some(
                                        "1.21.1",
                                    ),
                                    build: None,
                                },
                            ),
                        ],
                        runtimes: [],
                        includes: [],
                        directories: [
                            Directory {
                                path: Some(
                                    "plugins",
                                ),
                                addons: [
                                    Modrinth(
                                        ModrinthAddon {
                                            id: "fastasyncworldedit",
                                            version: Some(
                                                "latest",
                                            ),
                                            files: [],
                                        },
                                    ),
                                ],
                                packages: [
                                    Package {
                                        label: Some(
                                            "customplugin",
                                        ),
                                        sources: [
                                            Git(
                                                Git {
                                                    url: "https://github.com/example/customplugin.git",
                                                    path: None,
                                                },
                                            ),
                                        ],
                                        build: Some(
                                            PackageBuild {
                                                tasks: [
                                                    Execute(
                                                        ExecuteTask {
                                                            program: "gradlew",
                                                            arguments: [
                                                                "build",
                                                            ],
                                                            directory: Some(
                                                                ".",
                                                            ),
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        artifacts: [
                                            PackageArtifact {
                                                from: "build/libs/customplugin.jar",
                                                to: None,
                                            },
                                        ],
                                    },
                                ],
                                copies: [],
                                symlinks: [],
                            },
                            Directory {
                                path: None,
                                addons: [
                                    PaperMc(
                                        PaperMcAddon {
                                            project: "paper",
                                            version: None,
                                            build: None,
                                        },
                                    ),
                                ],
                                packages: [],
                                copies: [],
                                symlinks: [],
                            },
                        ],
                        targets: [
                            Target {
                                name: "lobby",
                                path: Some(
                                    "./run/lobby",
                                ),
                                kind: Server,
                            },
                        ],
                        subgroups: [],
                    },
                    Group {
                        label: Some(
                            "smp",
                        ),
                        platforms: [
                            Fabric(
                                FabricPlatform {
                                    minecraft: Some(
                                        "1.21.1",
                                    ),
                                    loader: Some(
                                        "latest",
                                    ),
                                },
                            ),
                        ],
                        runtimes: [],
                        includes: [],
                        directories: [
                            Directory {
                                path: Some(
                                    "mods",
                                ),
                                addons: [
                                    Modrinth(
                                        ModrinthAddon {
                                            id: "create",
                                            version: Some(
                                                "latest",
                                            ),
                                            files: [],
                                        },
                                    ),
                                ],
                                packages: [],
                                copies: [],
                                symlinks: [],
                            },
                        ],
                        targets: [
                            Target {
                                name: "smp-pack",
                                path: Some(
                                    "./run/smp-packwiz",
                                ),
                                kind: Packwiz,
                            },
                        ],
                        subgroups: [
                            Group {
                                label: Some(
                                    "smp-server",
                                ),
                                platforms: [],
                                runtimes: [],
                                includes: [],
                                directories: [
                                    Directory {
                                        path: None,
                                        addons: [
                                            FabricLoader(
                                                FabricLoaderAddon {
                                                    loader: None,
                                                    installer: None,
                                                },
                                            ),
                                        ],
                                        packages: [],
                                        copies: [],
                                        symlinks: [],
                                    },
                                ],
                                targets: [
                                    Target {
                                        name: "smp-server",
                                        path: Some(
                                            "./run/smp",
                                        ),
                                        kind: Server,
                                    },
                                ],
                                subgroups: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
}
