tests/snapshots/parse__minimal.snap
---
source: tests/parse.rs
expression: "parse(\"minimal\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        directories: [],
        targets: [
            Target {
                name: "main",
                path: None,
                kind: Server,
            },
        ],
        subgroups: [],
    },
}
