tests/snapshots/parse__multi_dir.snap
---
source: tests/parse.rs
expression: "parse(\"multi-dir\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        includes: [],
        directories: [
            Directory {
                path: Some(
                    "mods",
                ),
                addons: [
                    Modrinth(
                        ModrinthAddon {
                            id: "fabric-api",
                            version: Some(
                                "latest",
                            ),
                            files: [],
                        },
                    ),
                    Modrinth(
                        ModrinthAddon {
                            id: "sodium",
                            version: Some(
                                "latest",
                            ),
                            files: [],
                        },
                    ),
                ],
                packages: [],
                copies: [],
                symlinks: [],
            },
            Directory {
                path: Some(
                    "config",
                ),
                addons: [
                    Modrinth(
                        ModrinthAddon {
                            id: "cloth-config",
                            version: Some(
                                "latest",
                            ),
                            files: [],
                        },
                    ),
                ],
                packages: [],
                copies: [],
                symlinks: [],
            },
            Directory {
                path: Some(
                    "plugins",
                ),
                addons: [
                    Modrinth(
                        ModrinthAddon {
                            id: "spark",
                            version: Some(
                                "latest",
                            ),
                            files: [],
                        },
                    ),
                ],
                packages: [],
                copies: [],
                symlinks: [],
            },
        ],
        targets: [
            Target {
                name: "modded",
                path: Some(
                    "./run/modded",
                ),
                kind: Server,
            },
        ],
        subgroups: [],
        meta: {},
    },
}
